--- a/MyApplicatuon/app/src/main/AndroidManifest.xml
+++ b/MyApplicatuon/app/src/main/AndroidManifest.xml
@@ -8,15 +8,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MyPointActivity" />
-        <activity android:name=".activity.DetailPointActivity"></activity>
+        <activity
+            android:name=".activity.MyPointActivity"
+            android:screenOrientation="portrait"
+
+
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".activity.DetailPointActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
     </application>
 
 </manifest>
