--- a/MyApplicatuon/app/src/main/AndroidManifest.xml
+++ b/MyApplicatuon/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="www.aiyi.com.myapplicatuon">
 
     <application
+        android:name=".common.AppContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
