--- a/MyApplicatuon/app/build.gradle
+++ b/MyApplicatuon/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    compile 'in.srain.cube:ultra-ptr:1.0.10'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.alibaba:fastjson:1.1.34.android'
 }
